<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">MusicTube</string>
    <string name="action_settings">Settings</string>

    <string name="background_player_name">MusicTube Background Player</string>
    <string name="title_videoitem_detail" translatable="false">MusicTube</string>
    <string name="view_count_text">%1$s views</string>
    <string name="upload_date_text">Uploaded on %1$s</string>
    <string name="no_player_found">No stream player found. Install VLC?</string>
    <string name="install">Install</string>
    <string name="cancel">Cancel</string>
    <string name="fdroid_vlc_url" translatable="false">https://f-droid.org/repository/browse/?fdfilter=vlc&amp;fdid=org.videolan.vlc</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="share">Share</string>
    <string name="loading">Loading</string>
    <string name="download">Download</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="did_you_mean">Did you mean: %1$s ?</string>
    <string name="search_page">Search page: </string>
    <string name="share_dialog_title">Share with:</string>
    <string name="choose_browser">Choose browser:</string>
    <string name="screen_rotation">rotation</string>
    <string name="settings_activity_title">Settings</string>
    <string name="use_external_video_player_title">Use external video player</string>
    <string name="use_external_audio_player_title">Use external audio player</string>

    <string name="download_path_title">Download path video</string>
    <string name="download_path_summary">Path to store downloaded videos in.</string>
    <string name="download_path_dialog_title">Enter download path for videos</string>

    <string name="download_path_audio_title">Download path audio</string>
    <string name="download_path_audio_summary">Path to store downloaded audio in.</string>
    <string name="download_path_audio_dialog_title">Enter download path for audio files.</string>

    <string name="autoplay_by_calling_app_title">Autoplay when called from another app.</string>
    <string name="autoplay_by_calling_app_summary">Automatically play a video when MusicTube is called from another app.</string>
    <string name="default_resolution_title">Default Resolution</string>
    <string name="play_with_kodi_title">Play with Kodi</string>
    <string name="kore_not_found">Kore app not found. Install Kore?</string>
    <string name="fdroid_kore_url" translatable="false">https://f-droid.org/repository/browse/?fdfilter=Kore&amp;fdid=org.xbmc.kore</string>
    <string name="show_play_with_kodi_title">Show \"Play with Kodi\" option</string>
    <string name="show_play_with_kodi_summary">Display an option to play a video via Kodi media center.</string>
    <string name="play_audio">Audio</string>
    <string name="default_audio_format_title">Default audio format</string>
    <string name="webm_description">WebM — free format</string>
    <string name="m4a_description">m4a — better quality</string>
    <string name="theme_title">Theme</string>
    <string name="dark_theme_title">Dark</string>
    <string name="light_theme_title">Light</string>

    <string name="download_dialog_title">Download</string>
    <string-array name="download_options">
        <item>Video</item>
        <item>Audio</item>
    </string-array>

    <string-array name="download_options_no_audio">
        <item>Video</item>
    </string-array>

    <string-array name="download_options_no_video">
        <item>Audio</item>
    </string-array>

    <string name="next_video_title">Next video</string>
    <string name="show_next_and_similar_title">Show next and similar videos</string>
    <string name="url_not_supported_toast">URL not supported</string>
    <string name="similar_videos_btn_text">Similar videos</string>
    <string name="search_language_title">Preferable content language</string>
    <string name="settings_category_video_audio_title">Video &amp; Audio</string>
    <string name="settings_category_appearance_title">Appearance</string>
    <string name="settings_category_other_title">Other</string>
    <string name="background_player_time_text" translatable="false">%1$s - MusicTube</string>
    <string name="background_player_playing_toast">Playing in background</string>
    <string name="c3s_url" translatable="false">https://www.c3s.cc/</string>
    <string name="play_btn_text">Play</string>
    <string name="content">Content</string>
    <string name="show_age_restricted_content_title">Show age restricted content</string>
    <string name="video_is_age_restricted">Video is Age restricted. Enable age restricted videos in the settings first.</string>
    <string name="duration_live">live</string>

    <!-- error strings -->
    <string name="general_error">Error</string>
    <string name="network_error">Network error</string>
    <string name="could_not_load_thumbnails">Could not load all Thumbnails</string>
    <string name="youtube_signature_decryption_error">Could not decrypt video url signature.</string>
    <string name="parsing_error">Could not parse website.</string>
    <string name="light_parsing_error">Could not parse website complete.</string>
    <string name="content_not_available">Content not available.</string>
    <string name="blocked_by_gema">Blocked by GEMA.</string>
    <string name="could_not_setup_download_menu">Could not setup download menu.</string>
    <string name="live_streams_not_supported">This is a LIVE STREAM. These are not yet supported.</string>
    <string name="could_not_get_stream">Could not get any stream.</string>
    <!-- error activity -->
    <string name="sorry_string">Sorry that should not happen.</string>
    <string name="guru_meditation" translatable="false">Guru Meditation.</string>
    <string name="error_report_button_text">Report error via mail</string>
    <string name="error_snackbar_message">Sorry some errors occurred.</string>
    <string name="error_snackbar_action">REPORT</string>
    <string name="what_device_headline">Info:</string>
    <string name="what_happened_headline">What happened:</string>
    <string name="info_labels">What:\\nRequest:\\nContent Lang:\\nService:\\nGMT Time:\\nVersion:\\nOS version:\\nGlob. IP range:</string>
    <string name="info_searched_lbl">Searched for:</string>
    <string name="info_requested_stream_lbl">Requested stream:</string>
    <string name="your_comment">Your comment (in English):</string>
    <string name="error_details_headline">Details:</string>


    <!-- Content descriptions (for better accessibility) -->
    <string name="list_thumbnail_view_description">Video preview thumbnail</string>
    <string name="detail_thumbnail_view_description">Video preview thumbnail</string>
    <string name="detail_uploader_thumbnail_view_description">Uploader\'s userpic thumbnail</string>
    <string name="detail_likes_img_view_description">Likes</string>
    <string name="detail_dislikes_img_view_description">Dislikes</string>
    <string name="use_tor_title">Use Tor</string>
    <string name="use_tor_summary">(Experimental) Force download traffic through Tor for increased privacy (streaming videos not yet supported).</string>
    <string name="report_error">Report an Error</string>
    <string name="user_report">User report</string>

    <string name="err_dir_create">Cannot create download directory \'%1$s\'</string>
    <string name="info_dir_created">Created download directory \'%1$s\'</string>

    <string name="enable_background_audio">Play in background</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="text">Text</string>
    <string name="logging">Logging</string>
    <string name="logging_normal">Normal</string>
    <string name="logging_verbose">Verbose</string>
    <string name="retry">Retry</string>
    <string name="off">[off]</string>
    <string name="error_drm_not_supported">Protected content not supported on API levels below 18</string>
    <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>
    <string name="error_drm_unknown">An unknown DRM error occurred</string>
    <string name="error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_querying_decoders">Unable to query device decoders</string>
    <string name="error_instantiating_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>
    <string name="storage_permission_denied">Permission to access storage was denied</string>
    <string name="use_exoplayer_title">Use ExoPlayer</string>
    <string name="use_exoplayer_summary">Experimental</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_started">GET STARTED</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
