<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/videoitem_detail"
    style="?android:attr/textAppearanceLarge"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textIsSelectable="true"
    tools:context="com.example.musictube.Fragments.VideoItemDetailFragment">

    <com.nirhart.parallaxscroll.views.ParallaxScrollView
        android:id="@+id/detailMainContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:parallax_factor="1.9"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/detailVideoThumbnailWindowLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground">

                <ImageView
                    android:id="@+id/detailThumbnailView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:adjustViewBounds="true"
                    android:background="@android:color/black"
                    android:contentDescription="@string/detail_thumbnail_view_description"
                    android:scaleType="fitCenter"
                    android:src="@drawable/dummy_thumbnail_dark" />

                <ProgressBar
                    android:id="@+id/detailProgressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:indeterminate="true" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/playVideoButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_margin="@dimen/video_item_detail_play_fab_margin"
                    android:src="@drawable/ic_play_arrow_black_24dp"
                    android:visibility="invisible"
                    app:backgroundTint="@color/colorPrimary" />

                <Button
                    android:id="@+id/detailVideoThumbnailWindowBackgroundButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackground" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/detailTextContentLayout"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/detailVideoThumbnailWindowLayout"
                android:background="@android:color/white"
                android:visibility="gone">

                <LinearLayout
                    android:id="@+id/detailTopView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/detailVideoTitleView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="12dp"
                        android:layout_weight=".7"
                        android:text="Title"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="@dimen/video_item_detail_title_text_size" />

                    <ImageView
                        android:id="@+id/toggleDescriptionView"
                        android:layout_width="15dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="8dp"
                        android:src="@drawable/ic_keyboard_arrow_down_black_24dp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/detailViewCountView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/detailTopView"
                    android:layout_marginLeft="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="5dp"
                    android:text="10,069,948 views"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="@dimen/video_item_detail_views_text_size" />

                <RelativeLayout
                    android:id="@+id/detailExtraView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/detailViewCountView"
                    android:layout_marginEnd="12dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginStart="12dp"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/detailUploadDateView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="Upload date"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="@dimen/video_item_detail_upload_date_text_size" />

                    <TextView
                        android:id="@+id/detailDescriptionView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/detailUploadDateView"
                        android:layout_marginTop="3dp"
                        android:text="Description............."
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="@dimen/video_item_detail_description_text_size" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/detailExtraView"
                    android:layout_marginLeft="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="5dp">

                    <ImageView
                        android:id="@+id/detailThumbsUpImgView"
                        android:layout_width="@dimen/video_item_detail_like_image_width"
                        android:layout_height="@dimen/video_item_detail_like_image_height"
                        android:contentDescription="@string/detail_likes_img_view_description"
                        android:src="@drawable/thumbs_up" />

                    <TextView
                        android:id="@+id/detailThumbsUpCountView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="200"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="@dimen/video_item_detail_likes_text_size" />

                    <ImageView
                        android:id="@+id/detailThumbsDownImgView"
                        android:layout_width="@dimen/video_item_detail_like_image_width"
                        android:layout_height="@dimen/video_item_detail_like_image_height"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:contentDescription="@string/detail_dislikes_img_view_description"
                        android:src="@drawable/thumbs_down" />

                    <TextView
                        android:id="@+id/detailThumbsDownCountView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="100"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="@dimen/video_item_detail_likes_text_size" />
                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/detailUploaderWrapView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linearLayout"
                    android:layout_marginTop="12dp">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="#000" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/detailUploaderThumbnailView"
                        android:layout_width="@dimen/video_item_detail_uploader_image_size"
                        android:layout_height="@dimen/video_item_detail_uploader_image_size"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:contentDescription="@string/detail_uploader_thumbnail_view_description"
                        android:src="@drawable/buddy" />

                    <TextView
                        android:id="@+id/detailUploaderView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:layout_marginStart="28dp"
                        android:layout_toEndOf="@+id/detailUploaderThumbnailView"
                        android:layout_toRightOf="@+id/detailUploaderThumbnailView"
                        android:text="Uploader"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="@dimen/video_item_detail_uploader_text_size"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:layout_below="@id/detailUploaderThumbnailView"
                        android:background="#000" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/detailNextVideoRootLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/detailUploaderWrapView"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal|bottom"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/detailNextVideoTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/next_video_title"
                        android:textAllCaps="true"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="@dimen/video_item_detail_next_text_size" />

                    <RelativeLayout
                        android:id="@+id/detailNextVidButtonAndContentLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@id/detailNextVideoTitle">

                        <FrameLayout
                            android:id="@+id/detailNextVideoFrame"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <Button
                            android:id="@+id/detailNextVideoButton"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_alignBottom="@id/detailNextVideoFrame"
                            android:layout_alignTop="@id/detailNextVideoFrame"
                            android:background="?attr/selectableItemBackground" />
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/detailSimilarTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/detailNextVidButtonAndContentLayout"
                        android:layout_centerHorizontal="true"
                        android:text="@string/similar_videos_btn_text"
                        android:textAllCaps="true"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="@dimen/video_item_detail_next_text_size" />

                    <LinearLayout
                        android:id="@+id/similarVideosView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@id/detailSimilarTitle"
                        android:orientation="vertical"></LinearLayout>
                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>
    </com.nirhart.parallaxscroll.views.ParallaxScrollView>
</FrameLayout>